[metadata]
name = aa-pvetaxes
version = attr: pvetaxes.__version__
description = Alliance Auth app for tracking PVE activities and charging taxes
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/aa-pvetaxes
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.8
install_requires =
    allianceauth>=2.15.0
    django-eveuniverse>=1.0.0
    app-utils>=1.0.0

[options.packages.find]
include = pvetaxes*
